--- a/Presentacion/Views/DentistView.xaml
+++ b/Presentacion/Views/DentistView.xaml
@@ -8,15 +8,16 @@
         d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition x:Name="SideMenuColumn" Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <!-- Sidebar Dentista (Color Azul Médico) -->
         <Border Grid.Column="0" Background="#3498DB">
             <StackPanel Margin="10">
-                <Button Width="30" Height="30" Background="Transparent" Foreground="White" BorderThickness="0" FontWeight="Bold" FontSize="16" Cursor="Hand"
-                        HorizontalAlignment="Right" Margin="0,10,0,0">
+                <!-- Boton hamburguesa -->
+                <Button x:Name="BtnHamburger" Width="30" Height="30" Background="Transparent" Foreground="White" BorderThickness="0" FontWeight="Bold" FontSize="16" Cursor="Hand"
+                        HorizontalAlignment="Right" Margin="0,10,0,0" Click="BtnHamburger_Click">
                     <Image Source="pack://application:,,,/assets/icons/dashboard.png" Stretch="Uniform"/>
                 </Button>
                 <Image Source="pack://application:,,,/assets/icons/person.png" Width="60" Height="66" HorizontalAlignment="Center" Margin="0,20,0,10"/>
