--- a/Presentacion/Views/AdminView.xaml
+++ b/Presentacion/Views/AdminView.xaml
@@ -64,33 +64,38 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220"/>
-            <!-- Menú Lateral -->
+            <ColumnDefinition x:Name="SideMenuColumn" Width="200"/>
             <ColumnDefinition Width="*"/>
-            <!-- Contenido Principal -->
         </Grid.ColumnDefinitions>
 
         <!-- Sidebar Admin -->
         <Border Grid.Column="0" Background="#2C3E50">
-            <StackPanel Margin="10">
-                <TextBlock Text="ADMIN PANEL" Foreground="White" FontSize="20" FontWeight="Bold" Margin="0,20,0,30" HorizontalAlignment="Center" Height="28" Width="143"/>
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
+              HorizontalScrollBarVisibility="Disabled">
+                <StackPanel Margin="10">
+                    <!-- Botón Hamburguesa -->
+                    <Button x:Name="BtnHamburger" Width="30" Height="30" Background="Transparent" Foreground="White" BorderThickness="0" FontWeight="Bold" FontSize="16" Cursor="Hand"
+                        HorizontalAlignment="Right" Margin="0,10,0,0" Click="BtnHamburger_Click">
+                        <Image Source="pack://application:,,,/assets/icons/dashboard.png" Stretch="Uniform"/>
+                    </Button>
+                    <Image Source="pack://application:,,,/assets/icons/person.png" Width="60" Height="66" HorizontalAlignment="Center" Margin="0,20,0,10"/>
 
-                <!-- Botones de Navegación -->
-                <Button Content="Gestión Usuarios" Click="BtnGestionUsuariosClick" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Left" Padding="15,0"/>
-                <Button Content="Gestion de Pacientes" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Left" Padding="15,0" Click="BtnGestionPacientesClick"/>
-                <Button Content="Gestion Citas/Consultas" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Left" Padding="15,0"/>
-                <Button Content="Tratamientos" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Left" Padding="15,0" Click="BtnTratamientosClick"/>
-                <Button Content="Factura" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Left" Padding="15,0"/>
+                    <TextBlock Text="Admin " Foreground="White" FontSize="18" FontWeight="Bold" Margin="0,5,0,10" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Odontologia general" Foreground="#D6EAF8" FontSize="12" HorizontalAlignment="Center" Margin="0, 0, 0, 30"/>
 
-
-
-                <Separator Background="#7F8C8D" Margin="0,20"/>
-                <Button Content="Cerrar Sesión" Background="#E74C3C" Foreground="White" Height="35" Click="BtnCerrarSesionClick" Margin="0,10"/>
-            </StackPanel>
+                    <!-- Botones de Navegación -->
+                    <Button Content="Gestión Usuarios" Click="BtnGestionUsuariosClick" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Center" Padding="15,0"/>
+                    <Button Content="Gestion de Pacientes" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Center" Padding="15,0" Click="BtnGestionPacientesClick"/>
+                    <Button Content="Gestion Citas/Consultas" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Center" Padding="15,0"/>
+                    <Button Content="Tratamientos" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Center" Padding="15,0" Click="BtnTratamientosClick"/>
+                    <Button Content="Factura" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0" HorizontalContentAlignment="Center" Padding="15,0"/>
+                    <Button Content="Cerrar Sesión"  Background="Transparent" Foreground="White" Height="35" HorizontalAlignment="Center" Click="BtnCerrarSesionClick" Margin="0,5" Padding="15, 0" BorderThickness="0"/>
+                </StackPanel>
+            </ScrollViewer>
         </Border>
 
         <!-- Main Content -->
-        <Grid Grid.Column="1" Margin="20">
+        <Grid Grid.Column="1" Margin="20" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
